package a4.root.atlas.ntup_photon;
import "a4/root/RootExtension.proto";
import "a4/root/atlas/ntup_photon/BeamSpot.proto";
import "a4/root/atlas/ntup_photon/BunchConfigID.proto";
import "a4/root/atlas/ntup_photon/ChainEntry.proto";
import "a4/root/atlas/ntup_photon/Cluster.proto";
import "a4/root/atlas/ntup_photon/CollisionDecision.proto";
import "a4/root/atlas/ntup_photon/CombLinksD3PDObjectEF_e.proto";
import "a4/root/atlas/ntup_photon/CombLinksD3PDObjectL2_e.proto";
import "a4/root/atlas/ntup_photon/DiPhoton.proto";
import "a4/root/atlas/ntup_photon/EFElectron.proto";
import "a4/root/atlas/ntup_photon/EFPhoton.proto";
import "a4/root/atlas/ntup_photon/ElAsPh.proto";
import "a4/root/atlas/ntup_photon/Electron.proto";
import "a4/root/atlas/ntup_photon/EmTauROI.proto";
import "a4/root/atlas/ntup_photon/GenEvent.proto";
import "a4/root/atlas/ntup_photon/Jet.proto";
import "a4/root/atlas/ntup_photon/JetTruth.proto";
import "a4/root/atlas/ntup_photon/MBTS.proto";
import "a4/root/atlas/ntup_photon/MBTSTime.proto";
import "a4/root/atlas/ntup_photon/MET.proto";
import "a4/root/atlas/ntup_photon/MissingETTruth.proto";
import "a4/root/atlas/ntup_photon/Muon.proto";
import "a4/root/atlas/ntup_photon/Photon.proto";
import "a4/root/atlas/ntup_photon/PhotonPrimaryVertex.proto";
import "a4/root/atlas/ntup_photon/PhotonTruthParticle.proto";
import "a4/root/atlas/ntup_photon/PrimaryVertex.proto";
import "a4/root/atlas/ntup_photon/RefFinalMET.proto";
import "a4/root/atlas/ntup_photon/TopoMET.proto";
import "a4/root/atlas/ntup_photon/TrackParticle.proto";
import "a4/root/atlas/ntup_photon/TrigDBKeys.proto";
import "a4/root/atlas/ntup_photon/TrigDecision.proto";
import "a4/root/atlas/ntup_photon/TrigEMCluster.proto";
import "a4/root/atlas/ntup_photon/TrigElectron.proto";
import "a4/root/atlas/ntup_photon/TrigInDetTrack.proto";
import "a4/root/atlas/ntup_photon/TrigPhoton.proto";

message Event {
    optional uint32 run_number = 1 [(root_branch)="RunNumber"];
    optional uint32 event_number = 2 [(root_branch)="EventNumber"];
    
    optional uint32 timestamp = 100 [(root_branch)="timestamp"];
    optional uint32 timestamp_ns = 101 [(root_branch)="timestamp_ns"];
    
    optional uint32 lbn = 200 [(root_branch)="lbn"];
    
    optional uint32 bcid = 300 [(root_branch)="bcid"];
    
    optional uint32 detmask0 = 400 [(root_branch)="detmask0"];
    optional uint32 detmask1 = 401 [(root_branch)="detmask1"];
    
    optional float actualIntPerXing = 500 [(root_branch)="actualIntPerXing"];
    optional float averageIntPerXing = 501 [(root_branch)="averageIntPerXing"];
    
    optional uint32 mc_channel_number = 600 [(root_branch)="mc_channel_number"];
    optional uint32 mc_event_number = 601 [(root_branch)="mc_event_number"];
    optional float mc_event_weight = 602 [(root_branch)="mc_event_weight"];
    
    optional uint32 pixelFlags = 700 [(root_branch)="pixelFlags"];
    optional uint32 sctFlags = 701 [(root_branch)="sctFlags"];
    optional uint32 trtFlags = 702 [(root_branch)="trtFlags"];
    optional uint32 larFlags = 703 [(root_branch)="larFlags"];
    optional uint32 tileFlags = 704 [(root_branch)="tileFlags"];
    optional uint32 muonFlags = 705 [(root_branch)="muonFlags"];
    optional uint32 fwdFlags = 706 [(root_branch)="fwdFlags"];
    optional uint32 coreFlags = 707 [(root_branch)="coreFlags"];
    
    optional uint32 pixelError = 800 [(root_branch)="pixelError"];
    optional uint32 sctError = 801 [(root_branch)="sctError"];
    optional uint32 trtError = 802 [(root_branch)="trtError"];
    optional uint32 larError = 803 [(root_branch)="larError"];
    optional uint32 tileError = 804 [(root_branch)="tileError"];
    optional uint32 muonError = 805 [(root_branch)="muonError"];
    optional uint32 fwdError = 806 [(root_branch)="fwdError"];
    optional uint32 coreError = 807 [(root_branch)="coreError"];
    
    optional bool isSimulation = 900 [(root_branch)="isSimulation"];
    optional bool isCalibration = 901 [(root_branch)="isCalibration"];
    
    optional bool isTestBeam = 1000 [(root_branch)="isTestBeam"];
    
    optional bool L1_MBTS_2 = 1100 [(root_branch)="L1_MBTS_2"];
    optional bool L1_MBTS_2_BGRP7 = 1101 [(root_branch)="L1_MBTS_2_BGRP7"];
    optional bool L1_MBTS_2_UNPAIRED_ISO = 1102 [(root_branch)="L1_MBTS_2_UNPAIRED_ISO"];
    optional bool L1_MBTS_4_4 = 1103 [(root_branch)="L1_MBTS_4_4"];
    optional bool L1_MBTS_4_4_EMPTY = 1104 [(root_branch)="L1_MBTS_4_4_EMPTY"];
    
    repeated MBTS mbtses = 1200 [(root_prefix)="mb_"];
    optional MBTSTime mbtstime = 1201 [(root_prefix)="mbtime_"];
    
    optional CollisionDecision collision_decision = 1300 [(root_prefix)="collcand_"];
    
    repeated TrackParticle track_particles = 1400 [(root_prefix)="trk_"];
    
    optional BeamSpot beam_spot = 1500 [(root_prefix)="beamSpot_"];
    
    repeated Muon muons = 1600 [(root_prefix)="mu_"];
    repeated DiPhoton di_photons = 1601 [(root_prefix)="diphoton_"];
    
    repeated Jet jets_4 = 1700 [(root_prefix)="jet_AntiKt4TopoEMJets_"];
    repeated Jet jets_6 = 1701 [(root_prefix)="jet_AntiKt6TopoEMJets_"];
    
    optional BunchConfigID bunch_config_id = 1800 [(root_prefix)="bunch_"];
    repeated ElAsPh el_as_unconv_ph = 1801 [(root_prefix)="el_as_unconv_ph_"];
    repeated ElAsPh el_as_conv_ph = 1802 [(root_prefix)="el_as_conv_ph_"];
    
    repeated Photon photons = 1900 [(root_prefix)="ph_"];
    repeated Electron electrons = 1901 [(root_prefix)="el_"];
    
    optional TrigDecision trig_decision = 2000 [(root_prefix)="trig_"];
    
    repeated EmTauROI em_tau_rois = 2100 [(root_prefix)="trig_L1_emtau_"];
    
    repeated TrigEMCluster trig_emclusters = 2200 [(root_prefix)="trig_L2_emcl_"];
    repeated TrigInDetTrack trig_in_det_tracks_idscan = 2201 [(root_prefix)="trig_L2_trk_idscan_eGamma_"];
    repeated TrigInDetTrack trig_in_det_tracks_sitrack = 2202 [(root_prefix)="trig_L2_trk_sitrack_eGamma_"];
    repeated TrigElectron trig_electrons = 2203 [(root_prefix)="trig_L2_el_"];
    repeated TrigPhoton trig_photons = 2204 [(root_prefix)="trig_L2_ph_"];
    
    repeated Cluster clusters_emcl = 2300 [(root_prefix)="trig_EF_emcl_"];
    repeated Cluster clusters_emcl_slw = 2301 [(root_prefix)="trig_EF_emcl_slw_"];
    
    repeated EFElectron efelectrons = 2400 [(root_prefix)="trig_EF_el_"];
    repeated EFPhoton efphotons = 2401 [(root_prefix)="trig_EF_ph_"];
    
    repeated ChainEntry chain_entries = 2500 [(root_prefix)="trig_Nav_"];
    
    repeated CombLinksD3PDObjectL2_e comb_links_d3pdobject_l2_es = 2600 [(root_prefix)="trig_RoI_L2_e_"];
    repeated CombLinksD3PDObjectEF_e comb_links_d3pdobject_ef_es = 2601 [(root_prefix)="trig_RoI_EF_e_"];
    
    optional TrigDBKeys trig_dbkeys = 2700 [(root_prefix)="trig_DB_"];
    
    repeated PrimaryVertex primary_vertices = 2800 [(root_prefix)="PV_"];
    repeated PhotonPrimaryVertex photon_primary_vertices = 2801 [(root_prefix)="PhotonPV_"];
    
    repeated GenEvent gen_events = 2900 [(root_prefix)="mcevt_"];
    
    repeated PhotonTruthParticle photon_truth_particles = 3000 [(root_prefix)="mc_"];
    repeated JetTruth truth_jets_4 = 3001 [(root_prefix)="jet_AntiKt4TruthJets_"];
    repeated JetTruth truth_jets_6 = 3002 [(root_prefix)="jet_AntiKt6TruthJets_"];
    repeated JetTruth truth_jets_4_mu_noint = 3003 [(root_prefix)="jet_AntiKt4TruthWithMuNoIntJets_"];
    repeated JetTruth truth_jets_6_mu_noint = 3004 [(root_prefix)="jet_AntiKt6TruthWithMuNoIntJets_"];
    
    optional MET met = 3100 [(root_prefix)="met_"];
    optional RefFinalMET met_cryo = 3101 [(root_prefix)="MET_Cryo_"];
    optional RefFinalMET met_reffinal = 3102 [(root_prefix)="MET_RefFinal_"];
    optional RefFinalMET met_refele = 3103 [(root_prefix)="MET_RefEle_"];
    optional RefFinalMET met_refjet = 3104 [(root_prefix)="MET_RefJet_"];
    optional RefFinalMET met_refmuon = 3105 [(root_prefix)="MET_RefMuon_"];
    optional RefFinalMET met_refmuon_staco = 3106 [(root_prefix)="MET_RefMuon_Staco_"];
    optional RefFinalMET met_refmuon_muid = 3107 [(root_prefix)="MET_RefMuon_Muid_"];
    optional RefFinalMET met_refgamma = 3108 [(root_prefix)="MET_RefGamma_"];
    optional RefFinalMET met_reftau = 3109 [(root_prefix)="MET_RefTau_"];
    optional RefFinalMET met_cellout = 3110 [(root_prefix)="MET_CellOut_"];
    optional RefFinalMET met_muonboy = 3111 [(root_prefix)="MET_MuonBoy_"];
    optional RefFinalMET met_muonboy_track = 3112 [(root_prefix)="MET_MuonBoy_Track_"];
    optional RefFinalMET met_final = 3113 [(root_prefix)="MET_Final_"];
    optional TopoMET met_topo = 3114 [(root_prefix)="MET_Topo_"];
    optional TopoMET met_lochadtopo = 3115 [(root_prefix)="MET_LocHadTopo_"];
    
    optional MissingETTruth missing_ettruth = 3200 [(root_prefix)="MET_Truth_"];
    
}