import "a4/root/RootExtension.proto";

message PhotonPrimaryVertex {
    optional float px = 1 [(root_branch)="px"];
    optional float py = 2 [(root_branch)="py"];
    optional float pz = 3 [(root_branch)="pz"];
    
    optional float E = 100 [(root_branch)="E"];
    optional float m = 101 [(root_branch)="m"];
    
    optional int32 nTracks = 200 [(root_branch)="nTracks"];
    
    optional float sumPt = 300 [(root_branch)="sumPt"];
    optional float sumPt2 = 301 [(root_branch)="sumPt2"];
    
    optional int32 type = 400 [(root_branch)="type"];
    
    optional float missPt = 500 [(root_branch)="missPt"];
    optional float meanPt = 501 [(root_branch)="meanPt"];
    
    optional int32 nTracks_05GeV = 600 [(root_branch)="nTracks_05GeV"];
    optional int32 nTracks_07GeV = 601 [(root_branch)="nTracks_07GeV"];
    optional int32 nTracks_1GeV = 602 [(root_branch)="nTracks_1GeV"];
    optional int32 nTracks_2GeV = 603 [(root_branch)="nTracks_2GeV"];
    
}